--- a/ODK.Web.Razor/Pages/Account/Pending.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Pending.cshtml
@@ -15,4 +15,10 @@
         new MenuItem { Link = $"/", Text = "Home" },
         new MenuItem { Text = "Create account" }
     },
+    ContentFunc = 
+        @<div>
+            <div class="alert alert-success">
+                Thank you for signing up. An email has been sent to your email address containing a link to activate your account.
+            </div>
+        </div>
 })
