--- a/ODK.Web.Razor/Views/Shared/Components/_Wizard.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Wizard.cshtml
@@ -47,9 +47,8 @@
                 var nextId = pageIds[i + 1];
 
                 <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-primary" 
+                    <button type="button" class="btn btn-primary" 
                         data-bs-toggle="collapse" data-bs-target="#@nextId"
-                        formNoValidate
                         data-wizard-validate>
                         <span>Next</span>
                         @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.ChevronRight))
