(account wizard): do not use submit for next page nav

--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -61,6 +61,8 @@
         <i class="@Model.Class fa-regular fa-images"></i>break;
     case IconType.Instagram:
         <i class="@Model.Class fa-brands fa-instagram"></i>break;
+    case IconType.LocationCrosshairs:
+        <i class="@Model.Class fa-solid fa-location-crosshairs"></i>break;
     case IconType.LocationPin:
         <i class="@Model.Class fa-solid fa-location-dot"></i>break;
     case IconType.Logout:
