--- a/ODK.Web.Razor/Views/Shared/Account/_NotificationSettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_NotificationSettingsForm.cshtml
@@ -1,20 +1,22 @@
 ﻿@using ODK.Core.Notifications
 @using ODK.Web.Razor.Models.Notifications
 @model NotificationSettingsFormViewModel
+@{
+    var labels = new Dictionary<NotificationType, string>
+    {
+        { NotificationType.ChapterContactMessage, "New contact messages" },
+        { NotificationType.ConversationAdminMessage, "New conversation messages" },
+        { NotificationType.ConversationOwnerMessage, "New conversation messages from members" },
+        { NotificationType.NewEvent, "New events" },
+        { NotificationType.NewMember, "New members" }
+    };
+}
 
 @for (var i = 0; i < Model.Settings.Count; i++)
 {
     var setting = Model.Settings[i];
-
-    var labelText = setting.Type switch
-    {
-        NotificationType.ChapterContactMessage => "New contact messages",
-        NotificationType.ConversationAdminMessage => "New conversation messages",
-        NotificationType.ConversationOwnerMessage => "New conversation messages from members",
-        NotificationType.NewEvent => "New events",
-        NotificationType.NewMember => "New members",
-        _ => ""
-    };
+    
+    labels.TryGetValue(setting.Type, out var labelText);
 
     <div class="form-group mb-3">
         <div class="form-check form-switch">
@@ -23,4 +25,26 @@
             @Html.LabelFor(x => x.Settings[i].Enabled, labelText, new { @class = "form-check-label" })
         </div>                
     </div>
+}
+
+@for (var i = 0; i < Model.ChapterSettings.Count; i++)
+{
+    var chapterSettings = Model.ChapterSettings[i];
+
+    <h3>@chapterSettings.ChapterName</h3>
+
+    @for (var j = 0; j < chapterSettings.Settings.Count; j++)
+    {
+        var setting = chapterSettings.Settings[j];
+
+        labels.TryGetValue(setting.Type, out var labelText);
+
+        <div class="form-group mb-3">
+            <div class="form-check form-switch">
+                @Html.HiddenFor(x => x.ChapterSettings[i].Settings[j].Type)
+                @Html.CheckBoxFor(x => x.ChapterSettings[i].Settings[j].Enabled, new { @class = "form-check-input", role = "switch" })
+                @Html.LabelFor(x => x.ChapterSettings[i].Settings[j].Enabled, labelText, new { @class = "form-check-label" })
+            </div>
+        </div>
+    }
 }
