--- a/ODK.Web.Razor/Views/Shared/Account/_NotificationSettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_NotificationSettingsForm.cshtml
@@ -1,26 +1,96 @@
 ﻿@using ODK.Core.Notifications
+@using ODK.Core.Utils
+@using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Notifications
 @model NotificationSettingsFormViewModel
+@{
+    var icons = new Dictionary<NotificationGroupType, IconType>
+    {
+        { NotificationGroupType.Events, IconType.Calendar },
+        { NotificationGroupType.Members, IconType.User },
+        { NotificationGroupType.Messages, IconType.Envelope }
+    };
+}
 
 @for (var i = 0; i < Model.Settings.Count; i++)
 {
     var setting = Model.Settings[i];
-
-    var labelText = setting.Type switch
-    {
-        NotificationType.ChapterContactMessage => "New contact messages",
-        NotificationType.ConversationAdminMessage => "New conversation messages",
-        NotificationType.ConversationOwnerMessage => "New conversation messages from members",
-        NotificationType.NewEvent => "New events",
-        NotificationType.NewMember => "New members",
-        _ => ""
-    };
+    var label = EnumUtils.GetDisplayValue(setting.Group);
+    icons.TryGetValue(setting.Group, out var icon);
 
     <div class="form-group mb-3">
         <div class="form-check form-switch">
-            @Html.HiddenFor(x => x.Settings[i].Type)
-            @Html.CheckBoxFor(x => x.Settings[i].Enabled, new { @class = "form-check-input", role = "switch" })
-            @Html.LabelFor(x => x.Settings[i].Enabled, labelText, new { @class = "form-check-label" })
+            @if (icon != default)
+            {
+                @await Html.PartialAsync("Components/_Icon", new IconViewModel(icon))
+            }
+
+            @Html.CheckBoxFor(x => x.Settings[i].Enabled, new 
+            { 
+                @class = "form-check-input", 
+                role = "switch",
+                data_input_change_url = $"/account/notifications/{setting.Group}?enabled={{value}}"
+            })
+            @Html.LabelFor(x => x.Settings[i].Enabled, label, new { @class = "form-check-label" })
         </div>                
+    </div>
+}
+
+@if (Model.ChapterSettings.Count > 1)
+{
+    <div class="table-responsive mt-5">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Group</th>
+                    @for (var i = 0; i < Model.Settings.Count; i++)
+                    {
+                        var setting = Model.Settings[i];
+                        var label = EnumUtils.GetDisplayValue(setting.Group);
+                        icons.TryGetValue(setting.Group, out var icon);
+
+                        <th>
+                            @if (icon != default)
+                            {
+                                @await Html.PartialAsync("Components/_Icon", new IconViewModel(icon))
+                            }
+                            <span>@label</span>
+                        </th>
+                    }
+                </tr>
+            </thead>
+            <tbody>
+                @for (var i = 0; i < Model.ChapterSettings.Count; i++)
+                {
+                    var chapterSettings = Model.ChapterSettings[i];
+
+                    <tr>
+                        <td>@chapterSettings.ChapterName</td>
+
+                        @for (var j = 0; j < chapterSettings.Settings.Count; j++)
+                        {
+                            var setting = chapterSettings.Settings[j];
+                            var label = EnumUtils.GetDisplayValue(setting.Group);
+
+                            <td>
+                                @if (!setting.Group.ForAdmins() || 
+                                    Model.AdminChapterIds.Contains(chapterSettings.ChapterId))
+                                {
+                                    <div class="form-check form-switch">
+                                        @Html.HiddenFor(x => x.ChapterSettings[i].Settings[j].Group)
+                                        @Html.CheckBoxFor(x => x.ChapterSettings[i].Settings[j].Enabled, new 
+                                        { 
+                                            @class = "form-check-input", 
+                                            role = "switch",
+                                            data_input_change_url = $"/groups/{chapterSettings.ChapterId}/notifications/{setting.Group}/?enabled={{value}}"
+                                        })
+                                    </div>
+                                }                                
+                            </td>
+                        }
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 }
